# website

./: .env.example  .gitignore  Cargo.toml  force-refresh-projects.sh
frontend/: Cargo.toml  index.html  styles.css
frontend/src/: main.rs
src/: main.rs  portfolio.rs
