[package]
name = "wowvain_portfolio"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.5", features = ["fs"] }
