[package]
name = "wowvain_frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
gloo-net = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlElement", "HtmlInputElement", "HtmlTextAreaElement", "KeyboardEvent", "SubmitEvent"] }
yew = { version = "0.21", features = ["csr"] }
